--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "web-analyzer",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "type": "module",
+"scripts": {
+  "dev": "nodemon src/server.js",
+  "start": "node src/server.js",
+  "prisma:migrate": "prisma migrate dev --name init",
+  "prisma:deploy": "prisma migrate deploy",
+  "prisma:studio": "prisma studio"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
