--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "internship-backend",
+  "name": "web-analyzer",
   "version": "1.0.0",
   "main": "src/server.js",
  "type": "module",
