--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 "scripts": {
   "dev": "nodemon src/server.js",
   "start": "node src/server.js",
+  "build": "prisma generate",               
   "prisma:migrate": "prisma migrate dev --name init",
   "prisma:deploy": "prisma migrate deploy",
   "prisma:studio": "prisma studio"
